--- a/app/views/hardware_assigns/_hardware_assigns_users.erb
+++ b/app/views/hardware_assigns/_hardware_assigns_users.erb
@@ -6,7 +6,7 @@
 <% for hardware_assign in hardware_assigns %>
   <tr id="<%= dom_id(hardware_assign) %>">
 	<td>
-	  <%= hardware_assign.user.name unless hardware_assign.computer.nil? %>	
+	  <%= hardware_assign.user.name unless hardware_assign.user.nil? %>	
 	</td>
 	<td class="added_on">Added on: <%= hardware_assign.created_at %></td>
   </tr>
